[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
name = "atmo-monitor-stm32"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["defmt", "stm32f303re", "unstable-pac", "memory-x", "time-driver-any", "exti", "unstable-traits", "nightly"]  }
embassy-sync = { version = "0.3.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.0", path = "../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures" }
il0373 = { path = "../il0373", version = "0.2.0", features = ["sram"] }
embedded-graphics = "0.8"
profont = "0.7"
heapless = "0.7"
bme680 = "0.6.0"
pms-7003 = { git = "https://github.com/gpgreen/pms-7003", branch = "master", features = ["async"] }
static_cell = { version = "1.1", features = ["nightly"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.0"
micromath = "2.1.0"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
